added some button rendering logic for front end

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,13 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: top;
+  display: inline;
   flex-direction: column;
   align-items: center;
   justify-content: center;
