implemented all features on frontend
- can list all products
- can delete products
- can single and batch create products
- can patch products
- can export to csv
- can set images for each product

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #1aa15e;
 }
 
 
@@ -13,5 +13,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+ul.no-bullets {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+
+.AddForm {
+  color: white !important;
 }
 
